--- a/Config/translate/onmt_style/20890_CANone_transformer_wv512.yaml
+++ b/Config/translate/onmt_style/20890_CANone_transformer_wv512.yaml
@@ -1,8 +1,9 @@
 model: /root/zwk/DDPR_DATA/Artifacts/20890_CANone_transformer_wv512/20890_CANone_transformerwv512_best.pt
 beam_size: 10
 n_best: 10
-src:
-tgt:
-output:
-gpu:
-batch_size:
+src: /root/zwk/DDPR_DATA/data/M1000_CANone/test.buggy
+tgt: /root/zwk/DDPR_DATA/data/M1000_CANone/test.fix
+output: /root/zwk/DDPR_DATA/Artifacts/20890_CANone_transformer_wv512/20890_CANone_transformerwv512_best_b10.pred
+gpu: 2
+batch_size: 10
+max_length: 1010
