--- a/Config/CoCoNut/20878_CoCoNut_o2.yaml
+++ b/Config/CoCoNut/20878_CoCoNut_o2.yaml
@@ -5,13 +5,13 @@ decoder_embed_dim: 512
 decoder_out_embed_dim: 512
 encoder_layers: '[(512,6)] * 8'
 decoder_layers: '[(512,10)] * 5'
-lr: 0.128703688177207
+lr: 0.1528703688177207
 momentum:  0.5498989114182679
 clip_norm: 0.3526243918050602
 optimizer: 'nag'
 criterion: 'cross_entropy'
-savedir: 'D:\DDPR_DATA\OneLine_Replacement\M1000_Cure\save'
-trainbin: 'D:\DDPR_DATA\OneLine_Replacement\M1000_Cure\dest'
-batch_size: 128
+savedir: '/root/zwk/DDPR_DATA/CoCoNut/20878_CoCoNut_o2'
+trainbin: '/root/zwk/DDPR_DATA/data/M1000_CoCoNut/dest'
+batch_size: 32
 device_id: 0
-max-epoch: 20
+max-epoch: 25
