--- a/Config/translate/recoder/Recoder_eg.yaml
+++ b/Config/translate/recoder/Recoder_eg.yaml
@@ -1,7 +1,7 @@
 model_path: /home/zhongwenkang/Pretrained_Models/Recoder/best_model.ckpt
 ids_path: /home/zhongwenkang/NPR4J_new_test/new_test/test.ids
 input_dir: /home/zhongwenkang/NPR4J_new_test/new_test
-search_size: 500
+search_size: 300
 classcontent_dir: /home/zhongwenkang/NPR4J_processed/Recoder
 output_dir: /home/zhongwenkang/NPR4J_Pred/Recoder
 valdatapkl_f: /home/zhongwenkang/Pretrained_Models/Recoder/valdata.pkl
@@ -10,3 +10,8 @@ rule_f: /home/zhongwenkang/Pretrained_Models/Recoder/rule.pkl
 code_voc_path: /home/zhongwenkang/Pretrained_Models/Recoder/code_voc.pkl
 char_voc_path: /home/zhongwenkang/Pretrained_Models/Recoder/char_voc.pkl
 rulead_path: /home/zhongwenkang/Pretrained_Models/Recoder/rulead.pkl
+NL_voc_size: 26167
+code_voc_size: 26167
+voc_size: 81
+rule_num: 1265
+cnum: 764
