--- a/Config/translate/PatchEdits/Edits_b300_qbs.yaml
+++ b/Config/translate/PatchEdits/Edits_b300_qbs.yaml
@@ -2,5 +2,5 @@ data_path: /home/gehongliang/zwk/Data_Processed/PatchEdits/qbs.data
 vocab_path: /home/gehongliang/PE/Model/data/temp_vocab
 output_path: /home/gehongliang/zwk/NPR4J_Pred/qbs.pred
 model_path: /home/gehongliang/PE/Model/models-2022
-log_path: /home/gehongliang/zwk/NPR4J_Pred/qbs.pred
+log_path: /home/gehongliang/zwk/NPR4J_Pred/qbs.log
 beam_size: 300
